Sycn'ed management over REST for ExecutorMBean with the latest executor.  (main -> ce-main @ 89284)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 89386]
